! Fixed terrible layout in admin's member search form. Also removed empty values, I'm not sure what they were there for. (ManageMembers.template.php, mana.css)
! Fixed homepage thought buttons (Modify/Delete/Reply) not working correctly for non-admins. At the cost of 4 extra gzipped bytes, although the code is a bit shorter... Don't ask too much of that magical tool. (script.js)

* Won't get fooled again... If someone steps up and writes a custom error message when you try to register a new member with the same name as a membergroup (rather than an existing member). Well, I don't have time for that, so here's just the !! reminder comment... (Subs-Members.php)

! Actually, that extra space was simply misplaced, rather than unneeded. (GenericControls.template.php)

--- a/Themes/default/skins/mana.css
+++ b/Themes/default/skins/mana.css
@@ -262,9 +262,12 @@ pre.file_content
 .msearch_details
 	display: block
 	width: 49%
-
-dl.right dt
-	padding-right: 10px
+	dl
+		dt
+			text-align: right
+			padding-right: 10px
+		dd
+			width: 50%
 
 
 /* Styles for the manage maintenance section.
